# pos-graduacao

./: .gitignore  README.md  pyproject.toml
aplicacoes_ml/: correlacao.ipynb  correlacao_professor.ipynb  redes_neurais.ipynb  redes_neurais_teste_dois.ipynb  redes_neurais_trabalho.ipynb  redes_neurais_trabalho.py  trabalho_final_ecommerce.ipynb
aplicacoes_ml/assets/: arquivoDados1.txt  arquivoDados7.txt  arquivoDados9.txt  dadosAlunos.csv
aplicacoes_ml/assets_ecommerce/: ecomerceDezembro.txt  ecomerceFevereiro.txt  ecomerceJaneiro.txt  ecomerceMaio.txt  ecomerceMarco.txt  ecomercePadrao.txt
ciencia_dados_big_data/: big_data_estudos.ipynb
ciencia_dados_big_data/assets/: estudo_orientado_unidade_dois.csv  vendas_filial.csv
first_tri/aplicacoes_ml/: aula_knn.ipynb  classificadores_knn.ipynb  estudo_caso_envasadora.ipynb  trabalho_final_ecommerce.ipynb
first_tri/aplicacoes_ml/assets/: arquivoDados10.txt  (+8 more)
first_tri/ciencia_dados_big_data/: big_data_iris.ipynb  estudo_orientado_unidade_dois.ipynb
first_tri/mineracao_bi/: Aula assíncrona - Exemplo de Regressão Linear.ipynb  mineracao_texto.ipynb
second_tri/bd_nao_relacionais/: bd_teste.db  projeto_final.md
second_tri/python_aplicada_visualizacao_dados/: dasafio_dois.ipynb  desafio_cinco.ipynb  desafio_tres.ipynb  estudo_orientado_um.ipynb  estudo_orientados_unidade_tres.ipynb  projeto_imobiliaria.ipynb
second_tri/python_aplicado_analise_dados/: aula_assincrona.ipynb  estudo_orientado_dois.ipynb  estudo_orientado_tres.ipynb  estudo_orientado_um.ipynb  lab_dois.ipynb  lab_um.ipynb  teste.ipynb
(+12 files in other folders)
